# threshold-enc-scheme

./: README.md
client/: Cargo.toml
client/src/: dkg.rs  main.rs
go-ffi/: .gitignore  Makefile  README  format.json  go-rust  go.mod  main-static.go  main.go
go-ffi/lib/: libted.dylib  ted.h
go-ffi/lib/ted/: Cargo.toml  ted.h
go-ffi/lib/ted/src/: dkg.rs  errors.rs  lib.rs
server/: Cargo.toml
server/src/: dkg.rs  main.rs  sqlite.rs  ted.rs
