[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.0"
failure = "0.1.6"
rand = "0.6.5"
rand_derive = "0.5.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
threshold_crypto = { rev = "624eeee", git = "https://github.com/poanetwork/threshold_crypto" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
