[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bincode = "1.2.0"
failure = "0.1.6"
rand = "0.6.5"
rand_derive = "0.5.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.64"
threshold_crypto = { rev = "624eeee", git = "https://github.com/poanetwork/threshold_crypto" }
axum = "0.6.18"
axum-macros = "0.3.7"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rusqlite = { version = "0.29.0", features = ["bundled"] }
serde_rusqlite = "0.33.1"

lazy_static = "1.4.0"
