[package]
name = "ted"
version = "0.1.0"
edition = "2021"

[lib]
# If you only wanted dynamic library, you'd use only "cdylib".
# If you only wanted static library, you'd use only "staticlib".
# This demo shows both. See https://doc.rust-lang.org/reference/linkage.html
# for more information.
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
threshold_crypto = { rev = "624eeee", git = "https://github.com/poanetwork/threshold_crypto" }
bincode = "1.2.0"
failure = "0.1.6"
rand = "0.6.5"
rand_derive = "0.5.0"
anyhow = "1.0"
thiserror = "1.0"
